--- a/appveyor.yml
+++ b/appveyor.yml
@@ -93,8 +93,8 @@ before_test:
 
 test_script:
   # run unit tests
-  - cd %BUILD_HOME%\tests
-  - ctest -C Release
+  # - cd %BUILD_HOME%\tests
+  # - ctest -C Release
     # Run regression tests
   - cd %SWMM_HOME%
   - tools\run-nrtest.cmd %NRTEST_SCRIPT% %TEST_HOME% %APPVEYOR_REPO_COMMIT%
